# notion_bot

./: .env.example  README.md  pyproject.toml
.circleci/: config.yml
bot/: __init__.py  __main__.py  notion.py  set_commands.py  states.py
bot/handlers/: base.py
bot/utils/: __init__.py  log.py
